首页，选择服务项目页面整改

--- a/web/html/mobile/user/carType.html
+++ b/web/html/mobile/user/carType.html
@@ -19,6 +19,7 @@
                // var url="${base}/washcar/index.html?carType="+carType;
                // window.location.href=url;
                 $("#carType",window.parent.document).val(carType);
+                $("#carTypeHtml",window.parent.document).html(carType);
 
                 $("#carTypeIframe",window.parent.document).hide();
                 $("#myform",window.parent.document).show();
