--- a/web/html/mobile/qq/qq.html
+++ b/web/html/mobile/qq/qq.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <script>
       //  var url="http://wpa.qq.com/msgrd?v=3&uin=482077930&site=qq&menu=yes";
+      //  var url="http://wpa.qq.com/msgrd?v=3&uin=276245048&site=qq&menu=yes";
       //  window.location.href=url;
     </script>
 </head>
 <body>
-<a target="blank" href="http://wpa.qq.com/msgrd?v=3&uin=482077930&site=qq&menu=yes">
+<a target="blank" href="http://wpa.qq.com/msgrd?v=3&uin=799078779&site=qq&menu=yes">
     点我
 </a>
 </body>
