根据车牌号标识是否新增车辆

--- a/web/html/mobile/xc/xzfw2.html
+++ b/web/html/mobile/xc/xzfw2.html
@@ -81,7 +81,19 @@
         })
 
     });
+    function money_pay(){
+        var projectName=$("#projectName").val();//服务项目
+        if(''==projectName||null==projectName){
+            alert("请选择服务项目");
+            return ;
+        }else{
+            $("#totalPrice").val($("#total").html());
+            var url="${base}/washcar/moneyPay.html";
+            $('#myform').attr('action',url);
+            $("#myform").submit();
+        }
 
+    }
     </script>
     </head>
 <body>
