--- a/web/html/mobile/user/pay_by_weixin.html
+++ b/web/html/mobile/user/pay_by_weixin.html
@@ -1,172 +1,170 @@
+
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>我的订单</title>
-  <link href="${res}/css/xc/main.css" rel="stylesheet" />
-<link href="${res}/css/xc/orderlist.css" rel="stylesheet">
-<link href="${res}/css/xc/myorder.css" rel="stylesheet">
-<link href="${res}/css/xc/list.css" rel="stylesheet">
-<link href="${res}/images/foot/foot.css" rel="stylesheet">
-<script src="${res}/scripts/xc/jquery.min.js"></script>
-<script>
-	//ajax微信付款，首先获取jsParam
-	function wxpay(id){
-		var url="${base}/order/getJsParam.html";
-		var jsParam='${order.jsParam?default("")}';
-		jsParam=eval("("+jsParam+")");
-		if(''==jsParam||null==jsParam){
-			chongxinGetJsParam(id,url);
-		}else{
-			WeixinJSBridge.invoke(
-					'getBrandWCPayRequest'
-					,jsParam
-					,callback
-			);
-		}
-
-
-	}
-	function chongxinGetJsParam(id,url){
-		$.ajax({
-			type: "POST",
-			url: url,
-			data:{"orderId":id},
-			async : false,
-			dataType: "json",
-			success: function (data) {
-				var jsParam=data;
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>订单详情</title>
+	<link href="${res}/css/xc/main.css" rel="stylesheet" />
+	<link href="${res}/css/xc/orderlist.css" rel="stylesheet">
+	<link href="${res}/css/xc/orderdetail.css" rel="stylesheet">
+	<link href="${res}/css/xc/w_orderdetail.css" rel="stylesheet">
+	<link href="${res}/images/foot/foot.css" rel="stylesheet">
+	<script src="${res}/scripts/xc/jquery.min.js"></script>
+	<script>
+		//ajax微信付款，首先获取jsParam
+		function wxpay(id){
+			var url="${base}/order/getJsParam.html";
+			var jsParam='${order.jsParam?default("")}';
+			jsParam=eval("("+jsParam+")");
+			if(''==jsParam||null==jsParam){
+				chongxinGetJsParam(id,url);
+			}else{
 				WeixinJSBridge.invoke(
 						'getBrandWCPayRequest'
 						,jsParam
 						,callback
 				);
-			},
-			error: function (msg) {
-				alert("error");
 			}
-		});
-	}
-	function callback(res){
-		//  返回 res.err_msg,取值
-		// get_brand_wcpay_request:cancel   用户取消
-		// get_brand_wcpay_request:fail  发送失败
-		// get_brand_wcpay_request:ok 发送成功
-		WeixinJSBridge.log(res.err_msg);
-		if(res.err_msg=='get_brand_wcpay_request:ok')
-		{
-			//支付成功后修改订单状态，并发送派单通知
-			//alert("成功");
-			var orderId="${orderId!''}";
-			//alert(orderId);
-			//支付成功之后跳转到订单详情页面
-			var url="${base}/my/order"+orderId+".html";
-			//var url="${base}/order/wxpayUpdate.html?id="+orderId;
-			window.location.href=url;
+
+
 		}
-		else
-		{
-			//var msg='支付失败,请重新支付.';
-			//alert(msg);
-			//alert(res.err_code+" err_desc="+res.err_desc+" err_msg="+res.err_msg);
+		function chongxinGetJsParam(id,url){
+			$.ajax({
+				type: "POST",
+				url: url,
+				data:{"orderId":id},
+				async : false,
+				dataType: "json",
+				success: function (data) {
+					var jsParam=data;
+					WeixinJSBridge.invoke(
+							'getBrandWCPayRequest'
+							,jsParam
+							,callback
+					);
+				},
+				error: function (msg) {
+					alert("error");
+				}
+			});
 		}
-	};
-</script>
+		function callback(res){
+			//  返回 res.err_msg,取值
+			// get_brand_wcpay_request:cancel   用户取消
+			// get_brand_wcpay_request:fail  发送失败
+			// get_brand_wcpay_request:ok 发送成功
+			WeixinJSBridge.log(res.err_msg);
+			if(res.err_msg=='get_brand_wcpay_request:ok')
+			{
+				//支付成功后修改订单状态，并发送派单通知
+				//alert("成功");
+				var orderId="${orderId!''}";
+				//alert(orderId);
+				//支付成功之后跳转到订单详情页面
+				var url="${base}/my/order"+orderId+".html";
+				//var url="${base}/order/wxpayUpdate.html?id="+orderId;
+				window.location.href=url;
+			}
+			else
+			{
+				//var msg='支付失败,请重新支付.';
+				//alert(msg);
+				//alert(res.err_code+" err_desc="+res.err_desc+" err_msg="+res.err_msg);
+			}
+		};
+	</script>
 </head>
-<body class="ui-mobile-viewport ui-overlay-c">
-<div data-role="page"  tabindex="0" class="ui-page ui-body-c ui-page-active" >
-	<!-- the content -->
-    <div id="wrapper" >
-        <div id="scroller">
-        <article id="thelist">
-			    [#if order??]
-            	 <section>
-	        	<div class="userlist">
-		        	<div class="listinfo">
+<body>
+[#if order??]
+<div id="wrapper">
+	<article>
+		<!-- 已取消 -->
+		<section>
+			<div class="userlist">
+				<div class="detailuser">
+					<div class="listinfo">
+						[@portal_picture typeName="wx_logo"]
+						[#list pictures as pic]
+						<img class="avataricon" src="${pic.attachmentUrl!''}">
+						[/#list]
+						[/@portal_picture]
 						<div class="userinfo p_r">
-				        	<p class="username">订单详情</p>
-	    						<p>
-					        		<span>订单号：</span>
-					        		<span>${order.orderId[0..10]}</span>
-				        		</p>
-				        		<p>
-						        	<span>车牌号：</span>
-						        	<span>
-						        		${order.carNum!''}
-						        	</span>
-				        		</p>
-							<!--	<p>
-									<span>预约时间：</span>
-										<span>
-											${order.washTime!''}
-										</span>
-								</p>-->
-								<p>
-									<span>洗车类型：</span>
-										<span>
-											${order.washType!''}
-										</span>
-								</p>
-				        		   [#if order.status=='-1']
-	                               	 	<span class="orderstate color_orange" >未支付</span>
-	                                [/#if]
-	                                [#if order.status=='0']
-	                               	 	<span class="orderstate color_orange" >支付失败</span>
-	                                [/#if]
-	                                [#if order.status=='1']
-	                               	 	<span class="orderstate color_orange" >支付完成</span>
-	                                [/#if]
-	                                [#if order.status=='2']
-	                               	 	<span class="orderstate color_orange">用户取消</span>
-	                                [/#if]
+							<p class="username">洪宝洗车</p>
+							<p class="staricon clearfix">
+								<img src="http://mt.smartcarwashing.com/Public/img/starg.png">
+								<img src="http://mt.smartcarwashing.com/Public/img/starg.png">
+								<img src="http://mt.smartcarwashing.com/Public/img/starg.png">
+								<img src="http://mt.smartcarwashing.com/Public/img/starg.png">
+								<img src="http://mt.smartcarwashing.com/Public/img/starg.png">
+							</p>
+							[#if order.status=='-1']
+							<span class="orderstate color_orange">未支付</span>
+							[/#if]
+							[#if order.status=='0']
+							<span class="orderstate color_orange" >支付失败</span>
+							[/#if]
+							[#if order.status=='1']
+							<span class="orderstate color_orange">支付完成</span>
+							[/#if]
+							[#if order.status=='2']
+							<span class="orderstate color_orange">已取消</span>
+							[/#if]
+							[/#if]
 
+						</div>
+					</div>
+					<div class="userinfo optionlist">
+						<p class="clearfix">
+							<span class="f_l justify">订单号：</span>
+							<span class="f_r">${order.orderNo!''}</span></p>
+						<p class="clearfix"><span class="f_l">订单时间</span>
+							<span class="f_r">${order.createTime!''}</span>
+						</p>
+					</div>
 
-				        </div>
-		        	</div>
-		        	<div class="btnoper clearfix">
+					<div class="userinfo optionlist">
+						<p class="clearfix">
+							<input type="hidden" id="cid" name="cid" value="${car.id?default('')}"/>
+							<span class="carnum v_m">${order.carNum?default('')}</span>
+							<span class="carbrand v_m"></span>
+                                <span class="carcolor p_r"><font class="textwords v_m">${order.carColor?default('')}</font>
+                                <i class="colorlump">
+                                </i></span>
+							<span class="seatnum v_m">${order.carType?default('')}</span>
+						</p>
+					</div>
+					<div class="userinfo optionlist">
+						<p class="clearfix">${order.address?default('')}</p>
+					</div>
+				</div>
+
+				<div class="userinfo total">
+					<p class="clearfix">
+						<span class="f_l">总价</span>
+						<span class="f_r color_orange">${order.price?default('')}元</span>
+					</p>
+					<p class="tooltipoper clearfix">
+
 						[#if order.status=='-1']
-						<span class="btn_rectangle greyframe color_orange f_r vieworder" onclick="javascript:wxpay('${order.id}')">支付</span>
+						<span class="btn_rectangle btn_orange" onclick="javascript:wxpay('${order.id}')" id="confirm">确认支付</span>
+						[#else]
+						<span class="btn_rectangle btn_orange" onclick="window.location.href='${base}/f/order${order.id}.html'">查看</span>
 						[/#if]
-						<span class="btn_rectangle greyframe color_blue f_r vieworder" onclick="window.location.href='${base}/f/order${order.id}.html'">查看</span>
-		        	</div>
-	        	</div>
-        	</section>
 
-            [#else]
-	            <div class="userlist">
-			        	<div class="listinfo">
-				        	<div class="userinfo p_r">
-					        	<p >  暂无订单<a href="${base}/washcar/index.html"><font color="green" >去下单</font></a></p>
-					        </div>
-
-					    </div>
-
-			     </div>
-            [/#if]
-        	</article>
-       </div>
-       <article class="tooltip" style="display: none;">
-            <div class="mask"></div>
-            <div class="tooltipcont">
-                <!--<img src="../../res/images/exclamation.png">-->
-                <p class="tooltipwords"></p>
-                <p class="tooltipoper clearfix">
-                    <span class="btn_rectangle btn_orange f_r" id="confirm">确定</span>
-                </p>
-            </div>
-        </article>
-    </div>
-    </div>
-
-
+					</p>
+				</div>
+			</div>
+		</section>
+	</article>
+</div>
+[/#if]
 <div class="nav_fp">
 	<ul>
-        <li><a href="${base}/washcar/index.html" class="nav_cpjxa">上门洗车</a></li>
-        <li><a href="${base}/order/myorderlist.html" class="nav_gkk">洗车订单</a></li>
-        <li><a href="${base}/mycoupon.html" class="nav_grzxa">洗车券</a></li>
-    </ul>
+		<li><a href="${base}/washcar/index.html" class="nav_cpjxa">上门洗车</a></li>
+		<li><a href="${base}/order/myorderlist.html" class="nav_gkk">洗车订单</a></li>
+		<li><a href="${base}/mycoupon.html" class="nav_grzxa">洗车券</a></li>
+	</ul>
 </div>
 
-</body>
-</html>
+</body></html>
